[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/UI/game_ui/pause_menu.gd" type="Script" id=1]
[ext_resource path="res://scenes/UI/UI.gd" type="Script" id=2]
[ext_resource path="res://scenes/UI/game_ui/HUD.gd" type="Script" id=3]
[ext_resource path="res://scenes/UI/settings_menu.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/UI/esc_menu.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/UI/hotbar/hotbar.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/UI/game_ui/UI_root.gd" type="Script" id=7]




[node name="GameUI" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 2 )

[node name="UIRoot" type="Control" parent="."]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 7 )

[node name="PauseMenu" type="MarginContainer" parent="UIRoot"]
pause_mode = 2
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="EscMenu" parent="UIRoot/PauseMenu" instance=ExtResource( 5 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 1920.0
margin_bottom = 1080.0

[node name="SettingsMenu" parent="UIRoot/PauseMenu" instance=ExtResource( 4 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1920.0
margin_bottom = 1080.0

[node name="HUD" type="Control" parent="UIRoot"]
pause_mode = 1
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 3 )

[node name="Hotbar" parent="UIRoot/HUD" instance=ExtResource( 6 )]

[connection signal="button_pressed" from="UIRoot/PauseMenu/EscMenu" to="UIRoot/PauseMenu" method="_on_EscMenu_button_pressed"]
[connection signal="settings_menu_exited" from="UIRoot/PauseMenu/SettingsMenu" to="UIRoot/PauseMenu" method="_on_SettingsMenu_settings_menu_exited"]
